# mongodb-mcp-server

./: .gitignore  README.md  example_usage.py  pyproject.toml  test_server.py
my_mongo_mcp/: __init__.py  server.py
