[project]
name = "my-mongo-mcp"
version = "0.1.0"
description = "MongoDB MCP Server with CRUD operations"
dependencies = [
    "fastmcp>=0.2.0",
    "pymongo>=4.6.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
my-mongo-mcp = "my_mongo_mcp.server:main" 